feat: implement scale, start and stop actions
