# internal/server/v1/firehose/firehose.go
@@ -9,8 +9,12 @@ import (
 )
 
 const (
-	pathParamURN      = "urn"
-	kindFirehose      = "firehose"
+	pathParamURN = "urn"
+	kindFirehose = "firehose"
+
+	actionStop        = "stop"
+	actionScale       = "scale"
+	actionStart       = "start"
 	actionResetOffset = "reset"
 
 	// shield header names.
@@ -22,11 +26,15 @@ func Routes(r *mux.Router, client entropyv1beta1.ResourceServiceClient, shieldCl
 	// read APIs
 	r.Handle("/projects/{projectSlug}/firehoses", handleListFirehoses(client)).Methods(http.MethodGet)
 	r.Handle("/projects/{projectSlug}/firehoses/{urn}", handleGetFirehose(client)).Methods(http.MethodGet)
+	r.Handle("/projects/{projectId}/firehoses/{urn}/logs", handleGetFirehoseLogs(client)).Methods(http.MethodGet)
 
 	// write APIs
 	r.Handle("/projects/{projectSlug}/firehoses", handleCreateFirehose(client, shieldClient)).Methods(http.MethodPost)
 	r.Handle("/projects/{projectSlug}/firehoses/{urn}", handleUpdateFirehose(client, shieldClient)).Methods(http.MethodPut)
 	r.Handle("/projects/{projectSlug}/firehoses/{urn}", handleDeleteFirehose(client)).Methods(http.MethodDelete)
+
 	r.Handle("/projects/{projectSlug}/firehoses/{urn}/reset", handleResetFirehose(client)).Methods(http.MethodPost)
-	r.Handle("/projects/{projectId}/firehoses/{urn}/logs", handleGetFirehoseLogs(client)).Methods(http.MethodGet)
+	r.Handle("/projects/{projectSlug}/firehoses/{urn}/scale", handleScaleFirehose(client)).Methods(http.MethodPost)
+	r.Handle("/projects/{projectSlug}/firehoses/{urn}/start", handleStartOrStop(client, false)).Methods(http.MethodPost)
+	r.Handle("/projects/{projectSlug}/firehoses/{urn}/stop", handleStartOrStop(client, true)).Methods(http.MethodPost)
 }
