# swagger.yml
@@ -260,6 +260,163 @@ paths:
           description: internal error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /projects/{projectId}/firehoses/{firehoseUrn}/scale:
+    parameters:
+      - in: path
+        type: string
+        name: projectId
+        description: Identifier for the project.
+        required: true
+      - in: path
+        type: string
+        name: firehoseUrn
+        description: URN of the firehose.
+        required: true
+    post:
+      summary: Scale the number of instances of firehose.
+      description: Scale the number of instances of firehose.
+      operationId: scaleFirehose
+      parameters:
+        - in: path
+          name: projectId
+          type: string
+          required: true
+          description: Unique identifier of the project.
+        - in: path
+          name: firehoseUrn
+          type: string
+          required: true
+          description: URN of the firehose.
+        - in: body
+          name: body
+          schema:
+            type: object
+            required:
+              - "replicas"
+            properties:
+              replicas:
+                type: number
+                example: 2
+                description: Number of replicas to run.
+      responses:
+        "200":
+          description: Successfully applied update.
+          schema:
+            $ref: "#/definitions/Firehose"
+        "400":
+          description: Update request is not valid.
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "404":
+          description: Firehose with given URN was not found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: internal error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /projects/{projectId}/firehoses/{firehoseUrn}/start:
+    parameters:
+      - in: path
+        type: string
+        name: projectId
+        description: Identifier for the project.
+        required: true
+      - in: path
+        type: string
+        name: firehoseUrn
+        description: URN of the firehose.
+        required: true
+    post:
+      summary: Start the Firehose if it is currently stopped.
+      description: Start the Firehose if it is currently stopped.
+      operationId: startFirehose
+      parameters:
+        - in: path
+          name: projectId
+          type: string
+          required: true
+          description: Unique identifier of the project.
+        - in: path
+          name: firehoseUrn
+          type: string
+          required: true
+          description: URN of the firehose.
+        - in: body
+          name: body
+          schema:
+            type: object
+            required:
+              - "replicas"
+            properties: {}
+      responses:
+        "200":
+          description: Successfully applied update.
+          schema:
+            $ref: "#/definitions/Firehose"
+        "400":
+          description: Update request is not valid.
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "404":
+          description: Firehose with given URN was not found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: internal error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /projects/{projectId}/firehoses/{firehoseUrn}/stop:
+    parameters:
+      - in: path
+        type: string
+        name: projectId
+        description: Identifier for the project.
+        required: true
+      - in: path
+        type: string
+        name: firehoseUrn
+        description: URN of the firehose.
+        required: true
+    post:
+      summary: Stop the Firehose if it is currently running.
+      description: Stop the Firehose if it is currently running.
+      operationId: stopFirehose
+      parameters:
+        - in: path
+          name: projectId
+          type: string
+          required: true
+          description: Unique identifier of the project.
+        - in: path
+          name: firehoseUrn
+          type: string
+          required: true
+          description: URN of the firehose.
+        - in: body
+          name: body
+          schema:
+            type: object
+            required:
+              - "replicas"
+            properties: {}
+      responses:
+        "200":
+          description: Successfully applied update.
+          schema:
+            $ref: "#/definitions/Firehose"
+        "400":
+          description: Update request is not valid.
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "404":
+          description: Firehose with given URN was not found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: internal error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /projects/{projectId}/firehoses/{firehoseUrn}/logs:
     get:
       summary: Stream logs for a Firehose.
